--- a/freeagt.html
+++ b/freeagt.html
@@ -1,21 +1,21 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2022 Free Agent Leaderboard<br>(Through week 10)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2022 Free Agent Leaderboard<br>(Through week 11)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Marcus Mariota         </td><td><font size=3>1015</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Matt Ryan              </td><td><font size=3> 845</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 825</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 755</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Davis Mills            </td><td><font size=3> 730</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 685</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Marcus Mariota         </td><td><font size=3>1140</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 995</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 890</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Matt Ryan              </td><td><font size=3> 870</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 825</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Davis Mills            </td><td><font size=3> 780</td></tr>
 <tr><td><font size=3>7)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 580</td></tr>
 <tr><td><font size=3>8)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 465</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Mac Jones              </td><td><font size=3> 365</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Mac Jones              </td><td><font size=3> 400</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 395</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 395</td></tr>
 <tr><td><font size=3>12)</td><td><font size=3>Cooper Rush            </td><td><font size=3> 335</td></tr>
 <tr><td><font size=3>13)</td><td><font size=3>PJ Walker              </td><td><font size=3> 300</td></tr>
 <tr><td><font size=3>14)</td><td><font size=3>Jameis Winston         </td><td><font size=3> 285</td></tr>
@@ -24,8 +24,9 @@
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Dontrell Hilliard      </td><td><font size=3> 320</td></tr>
+<tr><td><font size=3>Dontrell Hilliard      </td><td><font size=3> 395</td></tr>
 <tr><td><font size=3>JaMycal Hasty          </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>Eno Benjamin           </td><td><font size=3> 205</td></tr>
 <tr><td><font size=3>Melvin Gordon          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Chuba Hubbard          </td><td><font size=3> 130</td></tr>
 <tr><td><font size=3>Tevin Coleman          </td><td><font size=3> 125</td></tr>
@@ -34,75 +35,74 @@
 <tr><td><font size=3>Deon Jackson           </td><td><font size=3> 115</td></tr>
 <tr><td><font size=3>JK Dobbins             </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Avery Williams         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Justin Jackson         </td><td><font size=3>  80</td></tr>
 <tr><td><font size=3>Brandon Bolden         </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Rex Burkhead           </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Reggie Gilliam         </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Darrel Williams        </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Gary Brightwell        </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 420</td></tr>
+<tr><td><font size=3>Mecole Hardman         </td><td><font size=3> 520</td></tr>
+<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 520</td></tr>
+<tr><td><font size=3>Josh Palmer            </td><td><font size=3> 445</td></tr>
+<tr><td><font size=3>Darius Slayton         </td><td><font size=3> 400</td></tr>
 <tr><td><font size=3>Laviska Shenault       </td><td><font size=3> 370</td></tr>
-<tr><td><font size=3>Darius Slayton         </td><td><font size=3> 360</td></tr>
 <tr><td><font size=3>Damiere Byrd           </td><td><font size=3> 340</td></tr>
+<tr><td><font size=3>Mack Hollins           </td><td><font size=3> 335</td></tr>
 <tr><td><font size=3>Isaiah McKenzie        </td><td><font size=3> 335</td></tr>
+<tr><td><font size=3>Parris Campbell        </td><td><font size=3> 325</td></tr>
+<tr><td><font size=3>Donovan Peoples-Jones  </td><td><font size=3> 325</td></tr>
 <tr><td><font size=3>Dante Pettis           </td><td><font size=3> 315</td></tr>
 <tr><td><font size=3>DeAndre Carter         </td><td><font size=3> 310</td></tr>
 <tr><td><font size=3>Corey Davis            </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>Mack Hollins           </td><td><font size=3> 310</td></tr>
 <tr><td><font size=3>Marquise Goodwin       </td><td><font size=3> 305</td></tr>
-<tr><td><font size=3>Parris Campbell        </td><td><font size=3> 295</td></tr>
-<tr><td><font size=3>Nick Westbrook-Ikhine  </td><td><font size=3> 290</td></tr>
-<tr><td><font size=3>Dyami Brown            </td><td><font size=3> 275</td></tr>
-<tr><td><font size=3>Rondale Moore          </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Donovan Peoples-Jones  </td><td><font size=3> 245</td></tr>
+<tr><td><font size=3>Quez Watkins           </td><td><font size=3> 295</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 325</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Will Dissly            </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Evan Engram            </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>OJ Howard              </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Tommy Tremble          </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Dalton Schultz         </td><td><font size=3> 140</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Ross Dwelley           </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Jody Fortson           </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Noah Gray              </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Jordan Akins           </td><td><font size=3> 115</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Colby Parkinson        </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Eric Saubert           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Irv Smith              </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 400</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Zach Ertz              </td><td><font size=3> 355</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Will Dissly            </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Evan Engram            </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>OJ Howard              </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Tommy Tremble          </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Jody Fortson           </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Austin Hooper          </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Hayden Hurst           </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Ross Dwelley           </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Noah Gray              </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Jordan Akins           </td><td><font size=3> 115</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 795</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 770</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 755</td></tr>
-<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 745</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 720</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 675</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 640</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 845</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 800</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 795</td></tr>
+<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 790</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 780</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 735</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 650</td></tr>
 <tr><td><font size=3>Jason Sanders          </td><td><font size=3> 620</td></tr>
+<tr><td><font size=3>Robbie Gould           </td><td><font size=3> 585</td></tr>
 <tr><td><font size=3>Riley Patterson        </td><td><font size=3> 575</td></tr>
 <tr><td><font size=3>Chris Boswell          </td><td><font size=3> 555</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 555</td></tr>
-<tr><td><font size=3>Robbie Gould           </td><td><font size=3> 530</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 485</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 505</td></tr>
 <tr><td><font size=3>Randy Bullock          </td><td><font size=3> 460</td></tr>
-<tr><td><font size=3>Mason Crosby           </td><td><font size=3> 410</td></tr>
+<tr><td><font size=3>Mason Crosby           </td><td><font size=3> 440</td></tr>
+<tr><td><font size=3>Mike Badgley           </td><td><font size=3> 385</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Christian Watson       </td><td><font size=3> 450</td></tr>
 <tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 350</td></tr>
 <tr><td><font size=3>Daniel Bellinger       </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Marcus Jones           </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Jelani Woods           </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Jalen Virgil           </td><td><font size=3> 155</td></tr>
 <tr><td><font size=3>Tyquan Thornton        </td><td><font size=3> 150</td></tr>
@@ -114,6 +114,6 @@
 <tr><td><font size=3>Chigoziem Okonkwo      </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Raheem Blackshear      </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Peyton Hendershot      </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>James Mitchell         </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Keaontay Ingram        </td><td><font size=3>  50</td></tr>
 </table>
 </td></tr></table>
