--- a/week14.html
+++ b/week14.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Pacheco</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>180</td></tr>
+<tr><td>Pacheco</td>       <td></td><td align=right>35</td></tr>
 <tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>THill</td>         <td></td><td align=right>405</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>35</td></tr>
+<tr><td>Schultz</td>       <td></td><td align=right>40</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>85</td></tr>
+<tr><td>Pickens</td>       <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>815</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>DWatson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>DWatson</td>       <td></td><td align=right>90</td></tr>
 <tr><td>JWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>130</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Freiermuth</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Freiermuth</td>    <td></td><td align=right>75</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>35</td></tr>
+<tr><td>Purdy</td>         <td></td><td align=right>200</td></tr>
+<tr><td></td>              <td></td><td align=right>530</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (2)</b></font></td></tr>
-<tr><td>GSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>GSmith</td>        <td></td><td align=right>190</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
-<tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
+<tr><td>MSanders</td>      <td></td><td align=right>320</td></tr>
+<tr><td>JJefferson</td>    <td></td><td align=right>105</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
-<tr><td>York</td>          <td></td><td align=right>0</td></tr>
+<tr><td>York</td>          <td></td><td align=right>25</td></tr>
 <tr><td>ZWhite</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>640</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>235</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>75</td></tr>
 <tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Kirk</td>          <td></td><td align=right>0</td></tr>
 <tr><td>GDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Everett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Maher</td>         <td></td><td align=right>0</td></tr>
-<tr><td>DPierce</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Maher</td>         <td></td><td align=right>105</td></tr>
+<tr><td>DPierce</td>       <td></td><td align=right>85</td></tr>
+<tr><td></td>              <td></td><td align=right>500</td></tr>
 </table>
 </td>
 </tr>
@@ -67,57 +67,57 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Foreman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>ASt Brown</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>305</td></tr>
+<tr><td>Foreman</td>       <td></td><td align=right>35</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>35</td></tr>
+<tr><td>ASt Brown</td>     <td></td><td align=right>30</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>35</td></tr>
+<tr><td>McPherson</td>     <td></td><td align=right>40</td></tr>
 <tr><td>Pickett</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>480</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (6)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>125</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>95</td></tr>
 <tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
-<tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
+<tr><td>KAllen</td>        <td></td><td align=right>45</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Knox</td>          <td></td><td align=right>100</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>95</td></tr>
 <tr><td>SMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>460</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Tagovailoa</td>    <td></td><td align=right>100</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>110</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>140</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>80</td></tr>
 <tr><td>Dulcich</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>CWatson</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Carlson</td>       <td></td><td align=right>125</td></tr>
+<tr><td>Mason</td>         <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>580</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (9)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>335</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Carter</td>        <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>135</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>155</td></tr>
 <tr><td>-</td>             <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>80</td></tr>
+<tr><td>GWilson</td>       <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>740</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (7)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Palmer</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>115</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>45</td></tr>
+<tr><td>Pollard</td>       <td></td><td align=right>175</td></tr>
+<tr><td>Aiyuk</td>         <td></td><td align=right>125</td></tr>
+<tr><td>Palmer</td>        <td></td><td align=right>25</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>110</td></tr>
 <tr><td>Likely</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>595</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Cousins</td>       <td></td><td align=right>205</td></tr>
+<tr><td>DCook</td>         <td></td><td align=right>50</td></tr>
 <tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>100</td></tr>
+<tr><td>Hockenson</td>     <td></td><td align=right>35</td></tr>
+<tr><td>Succop</td>        <td></td><td align=right>5</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>125</td></tr>
+<tr><td></td>              <td></td><td align=right>520</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -167,42 +167,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Steven(9)</font></td>
-    <td><font size=2>10</font></td>
+    <td><font size=2>11</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>8725</font></td>
-    <td><font size=2>6470</font></td>
+    <td><font size=2>9465</font></td>
+    <td><font size=2>7050</font></td>
     <td><font size=2>1235</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>9</font></td>
+    <td><font size=2>10</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>7925</font></td>
-    <td><font size=2>7130</font></td>
+    <td><font size=2>8740</font></td>
+    <td><font size=2>7660</font></td>
     <td><font size=2>845</font></td>
     <td><font size=2>435</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8560</font></td>
-    <td><font size=2>8470</font></td>
+    <td><font size=2>9155</font></td>
+    <td><font size=2>8990</font></td>
     <td><font size=2>975</font></td>
     <td><font size=2>380</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>8000</font></td>
-    <td><font size=2>7995</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>8500</font></td>
+    <td><font size=2>8635</font></td>
     <td><font size=2>1450</font></td>
     <td><font size=2>305</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>6585</font></td>
-    <td><font size=2>7570</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7165</font></td>
+    <td><font size=2>8310</font></td>
     <td><font size=2>850</font></td>
     <td><font size=2>260</font></td>
     <td><font size=2>0</font></td>
@@ -215,42 +215,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Sam(4)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>9175</font></td>
-    <td><font size=2>8480</font></td>
+    <td><font size=2>9655</font></td>
+    <td><font size=2>8940</font></td>
     <td><font size=2>1280</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>4</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>8285</font></td>
-    <td><font size=2>8035</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>8745</font></td>
+    <td><font size=2>8515</font></td>
     <td><font size=2>840</font></td>
     <td><font size=2>270</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>States(2)</font></td>
-    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7065</font></td>
-    <td><font size=2>8475</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>7705</font></td>
+    <td><font size=2>8975</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7465</font></td>
-    <td><font size=2>7120</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7985</font></td>
+    <td><font size=2>7715</font></td>
     <td><font size=2>1175</font></td>
     <td><font size=2>190</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>John(10)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>7370</font></td>
-    <td><font size=2>9410</font></td>
+    <td><font size=2>10</font></td>
+    <td><font size=2>7900</font></td>
+    <td><font size=2>10225</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>115</font></td>
     <td><font size=2>1</font></td>
