--- a/week18.html
+++ b/week18.html
@@ -67,11 +67,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
 <tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JJohnson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Conklin</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>CWatson</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
