--- a/week18.html
+++ b/week18.html
@@ -27,7 +27,7 @@
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>ASt Brown</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Dicker (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Pickett</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
